US09 Customer can create their account by using phone number or email as username then they can logged in and buy products

--- a/VirtoCommerce.Storefront/Properties/launchSettings.json
+++ b/VirtoCommerce.Storefront/Properties/launchSettings.json
@@ -17,12 +17,12 @@
     },
     "VirtoCommerce.Storefront": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_preventHostingStartup": "True",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:2083/"
+      "applicationUrl": "http://localhost:4000/"
     }
   }
 }
